FireBaseUI with Kotlin

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,10 @@
     tools:context=".MainActivity">
 
 
-    <view class="androidx.appcompat.app.AlertController$RecycleListView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerview">
-
-    </view>
-
-
-
-
-
+        tools:listitem="@layout/row"
+    />
 </LinearLayout>
