--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -13,28 +13,31 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="279dp"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/rtitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rtitleTv"
             android:text="Title"
-            android:textStyle="bold"
             android:textColor="#000"
-            android:textSize="22sp"/>
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
         <ImageView
+            android:id="@+id/rimageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:id="@+id/rimageView"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop" />
+
         <TextView
+            android:id="@+id/rDescriptionView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="This will be description  of the post"
-            android:textSize="20sp"
-            android:id="@+id/rDescriptionView"/>
+            android:textSize="20sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
